# serializer version: 1
# name: test_zephyr_codegen_golden[esp_bme680][esp_bme680]
  dict({
    'CMakeLists.txt': '''
      cmake_minimum_required(VERSION 3.20.0)
      find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})
      project(esp32_devkitc)
      target_sources(app PRIVATE src/main.c)
      target_include_directories(app PRIVATE src/include)
    ''',
    'boards/esp32_devkitc.overlay': '''
      /* Generated by demol */
      &i2c0 { bme680@0x76 { status = "okay"; reg = <0x76>; compatible = "bosch,bme680"; }; };
  
    ''',
    'prj.conf': '''
      # Generated by demol
      CONFIG_BME680=y
      # MQTT client stack (T16 — skeleton only)
      CONFIG_NET_IPV4=y
      CONFIG_NET_TCP=y
      CONFIG_NET_SOCKETS=y
      CONFIG_NET_SOCKETS_OFFLOAD=n
      CONFIG_NET_DHCPV4=y
      CONFIG_MQTT_LIB=y
  
    ''',
    'src/bme680.c': '''
      /*
       * Zephyr BME680 driver (env sensor: temperature, pressure, humidity).
       * Generated by demol — uses Zephyr's built-in bosch,bme680 sensor
       * driver via the unified sensor_sample_fetch / sensor_channel_get API.
       */
      
      #include <zephyr/device.h>
      #include <zephyr/drivers/sensor.h>
      #include <zephyr/drivers/sensor/bme680.h>
      
      #include "bme680.h"
      
      static const struct device *bme680_dev = DEVICE_DT_GET(DT_INST(0, bosch_bme680));
      
      int bme680_init(void)
      {
          if (!device_is_ready(bme680_dev)) {
              return -ENODEV;
          }
          return 0;
      }
      
      int bme680_read(struct bme680_data *data)
      {
          struct sensor_value t = {0};
          struct sensor_value p = {0};
          struct sensor_value h = {0};
      
          if (sensor_sample_fetch(bme680_dev) < 0) {
              return -EIO;
          }
      
          sensor_channel_get(bme680_dev, SENSOR_CHAN_AMBIENT_TEMP, &t);
          sensor_channel_get(bme680_dev, SENSOR_CHAN_PRESS, &p);
          sensor_channel_get(bme680_dev, SENSOR_CHAN_HUMIDITY, &h);
      
          data->temperature = sensor_value_to_double(&t);
          data->pressure    = sensor_value_to_double(&p);
          data->humidity    = sensor_value_to_double(&h);
          return 0;
      }
    ''',
    'src/main.c': '''
      /*
       * Zephyr application entry point.
       * Generated by demol — driver logic is added in a later task.
       */
      
      #include <zephyr/kernel.h>
      #include <zephyr/net/mqtt.h>
      #include <zephyr/net/socket.h>
      
      static struct mqtt_client client;
      
      static void mqtt_init(void)
      {
              /* T16 skeleton: broker.connect, client.init.
               * Full publish loop is implemented in a later task.
               */
      }
      
      int main(void)
      {
              mqtt_init();
              return 0;
      }
  
    ''',
  })
# ---
# name: test_zephyr_codegen_golden[esp_iot_device][esp_iot_device]
  dict({
    'CMakeLists.txt': '''
      cmake_minimum_required(VERSION 3.20.0)
      find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})
      project(esp32_devkitc)
      target_sources(app PRIVATE src/main.c)
      target_include_directories(app PRIVATE src/include)
    ''',
    'boards/esp32_devkitc.overlay': '''
      /* Generated by demol */
      &i2c0 { bme680@0x76 { status = "okay"; reg = <0x76>; compatible = "bosch,bme680"; }; };
  
    ''',
    'prj.conf': '''
      # Generated by demol
      CONFIG_BME680=y
      # MQTT client stack (T16 — skeleton only)
      CONFIG_NET_IPV4=y
      CONFIG_NET_TCP=y
      CONFIG_NET_SOCKETS=y
      CONFIG_NET_SOCKETS_OFFLOAD=n
      CONFIG_NET_DHCPV4=y
      CONFIG_MQTT_LIB=y
  
    ''',
    'src/bme680.c': '''
      /*
       * Zephyr BME680 driver (env sensor: temperature, pressure, humidity).
       * Generated by demol — uses Zephyr's built-in bosch,bme680 sensor
       * driver via the unified sensor_sample_fetch / sensor_channel_get API.
       */
      
      #include <zephyr/device.h>
      #include <zephyr/drivers/sensor.h>
      #include <zephyr/drivers/sensor/bme680.h>
      
      #include "bme680.h"
      
      static const struct device *bme680_dev = DEVICE_DT_GET(DT_INST(0, bosch_bme680));
      
      int bme680_init(void)
      {
          if (!device_is_ready(bme680_dev)) {
              return -ENODEV;
          }
          return 0;
      }
      
      int bme680_read(struct bme680_data *data)
      {
          struct sensor_value t = {0};
          struct sensor_value p = {0};
          struct sensor_value h = {0};
      
          if (sensor_sample_fetch(bme680_dev) < 0) {
              return -EIO;
          }
      
          sensor_channel_get(bme680_dev, SENSOR_CHAN_AMBIENT_TEMP, &t);
          sensor_channel_get(bme680_dev, SENSOR_CHAN_PRESS, &p);
          sensor_channel_get(bme680_dev, SENSOR_CHAN_HUMIDITY, &h);
      
          data->temperature = sensor_value_to_double(&t);
          data->pressure    = sensor_value_to_double(&p);
          data->humidity    = sensor_value_to_double(&h);
          return 0;
      }
    ''',
    'src/main.c': '''
      /*
       * Zephyr application entry point.
       * Generated by demol — driver logic is added in a later task.
       */
      
      #include <zephyr/kernel.h>
      #include <zephyr/net/mqtt.h>
      #include <zephyr/net/socket.h>
      
      static struct mqtt_client client;
      
      static void mqtt_init(void)
      {
              /* T16 skeleton: broker.connect, client.init.
               * Full publish loop is implemented in a later task.
               */
      }
      
      int main(void)
      {
              mqtt_init();
              return 0;
      }
  
    ''',
  })
# ---
# name: test_zephyr_codegen_golden[wemos_a][wemos_a]
  dict({
    'CMakeLists.txt': '''
      cmake_minimum_required(VERSION 3.20.0)
      find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})
      project(wemosd1mini)
      target_sources(app PRIVATE src/main.c)
      target_include_directories(app PRIVATE src/include)
    ''',
    'boards/wemosd1mini.overlay': '''
      /* Generated by demol */
  
    ''',
    'prj.conf': '''
      # Generated by demol
      # MQTT client stack (T16 — skeleton only)
      CONFIG_NET_IPV4=y
      CONFIG_NET_TCP=y
      CONFIG_NET_SOCKETS=y
      CONFIG_NET_SOCKETS_OFFLOAD=n
      CONFIG_NET_DHCPV4=y
      CONFIG_MQTT_LIB=y
  
    ''',
    'src/main.c': '''
      /*
       * Zephyr application entry point.
       * Generated by demol — driver logic is added in a later task.
       */
      
      #include <zephyr/kernel.h>
      #include <zephyr/net/mqtt.h>
      #include <zephyr/net/socket.h>
      
      static struct mqtt_client client;
      
      static void mqtt_init(void)
      {
              /* T16 skeleton: broker.connect, client.init.
               * Full publish loop is implemented in a later task.
               */
      }
      
      int main(void)
      {
              mqtt_init();
              return 0;
      }
  
    ''',
  })
# ---
# name: test_zephyr_codegen_golden[wemos_bme680][wemos_bme680]
  dict({
    'CMakeLists.txt': '''
      cmake_minimum_required(VERSION 3.20.0)
      find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})
      project(wemosd1mini)
      target_sources(app PRIVATE src/main.c)
      target_include_directories(app PRIVATE src/include)
    ''',
    'boards/wemosd1mini.overlay': '''
      /* Generated by demol */
      &i2c0 { bme680@0x76 { status = "okay"; reg = <0x76>; compatible = "bosch,bme680"; }; };
  
    ''',
    'prj.conf': '''
      # Generated by demol
      CONFIG_BME680=y
      # MQTT client stack (T16 — skeleton only)
      CONFIG_NET_IPV4=y
      CONFIG_NET_TCP=y
      CONFIG_NET_SOCKETS=y
      CONFIG_NET_SOCKETS_OFFLOAD=n
      CONFIG_NET_DHCPV4=y
      CONFIG_MQTT_LIB=y
  
    ''',
    'src/bme680.c': '''
      /*
       * Zephyr BME680 driver (env sensor: temperature, pressure, humidity).
       * Generated by demol — uses Zephyr's built-in bosch,bme680 sensor
       * driver via the unified sensor_sample_fetch / sensor_channel_get API.
       */
      
      #include <zephyr/device.h>
      #include <zephyr/drivers/sensor.h>
      #include <zephyr/drivers/sensor/bme680.h>
      
      #include "bme680.h"
      
      static const struct device *bme680_dev = DEVICE_DT_GET(DT_INST(0, bosch_bme680));
      
      int bme680_init(void)
      {
          if (!device_is_ready(bme680_dev)) {
              return -ENODEV;
          }
          return 0;
      }
      
      int bme680_read(struct bme680_data *data)
      {
          struct sensor_value t = {0};
          struct sensor_value p = {0};
          struct sensor_value h = {0};
      
          if (sensor_sample_fetch(bme680_dev) < 0) {
              return -EIO;
          }
      
          sensor_channel_get(bme680_dev, SENSOR_CHAN_AMBIENT_TEMP, &t);
          sensor_channel_get(bme680_dev, SENSOR_CHAN_PRESS, &p);
          sensor_channel_get(bme680_dev, SENSOR_CHAN_HUMIDITY, &h);
      
          data->temperature = sensor_value_to_double(&t);
          data->pressure    = sensor_value_to_double(&p);
          data->humidity    = sensor_value_to_double(&h);
          return 0;
      }
    ''',
    'src/main.c': '''
      /*
       * Zephyr application entry point.
       * Generated by demol — driver logic is added in a later task.
       */
      
      #include <zephyr/kernel.h>
      #include <zephyr/net/mqtt.h>
      #include <zephyr/net/socket.h>
      
      static struct mqtt_client client;
      
      static void mqtt_init(void)
      {
              /* T16 skeleton: broker.connect, client.init.
               * Full publish loop is implemented in a later task.
               */
      }
      
      int main(void)
      {
              mqtt_init();
              return 0;
      }
  
    ''',
  })
# ---
# name: test_zephyr_codegen_golden[wemos_bme680_alert][wemos_bme680_alert]
  dict({
    'CMakeLists.txt': '''
      cmake_minimum_required(VERSION 3.20.0)
      find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})
      project(wemosd1mini)
      target_sources(app PRIVATE src/main.c)
      target_include_directories(app PRIVATE src/include)
    ''',
    'boards/wemosd1mini.overlay': '''
      /* Generated by demol */
      &i2c0 { bme680@0x76 { status = "okay"; reg = <0x76>; compatible = "bosch,bme680"; }; };
  
    ''',
    'prj.conf': '''
      # Generated by demol
      CONFIG_BME680=y
      # MQTT client stack (T16 — skeleton only)
      CONFIG_NET_IPV4=y
      CONFIG_NET_TCP=y
      CONFIG_NET_SOCKETS=y
      CONFIG_NET_SOCKETS_OFFLOAD=n
      CONFIG_NET_DHCPV4=y
      CONFIG_MQTT_LIB=y
  
    ''',
    'src/bme680.c': '''
      /*
       * Zephyr BME680 driver (env sensor: temperature, pressure, humidity).
       * Generated by demol — uses Zephyr's built-in bosch,bme680 sensor
       * driver via the unified sensor_sample_fetch / sensor_channel_get API.
       */
      
      #include <zephyr/device.h>
      #include <zephyr/drivers/sensor.h>
      #include <zephyr/drivers/sensor/bme680.h>
      
      #include "bme680.h"
      
      static const struct device *bme680_dev = DEVICE_DT_GET(DT_INST(0, bosch_bme680));
      
      int bme680_init(void)
      {
          if (!device_is_ready(bme680_dev)) {
              return -ENODEV;
          }
          return 0;
      }
      
      int bme680_read(struct bme680_data *data)
      {
          struct sensor_value t = {0};
          struct sensor_value p = {0};
          struct sensor_value h = {0};
      
          if (sensor_sample_fetch(bme680_dev) < 0) {
              return -EIO;
          }
      
          sensor_channel_get(bme680_dev, SENSOR_CHAN_AMBIENT_TEMP, &t);
          sensor_channel_get(bme680_dev, SENSOR_CHAN_PRESS, &p);
          sensor_channel_get(bme680_dev, SENSOR_CHAN_HUMIDITY, &h);
      
          data->temperature = sensor_value_to_double(&t);
          data->pressure    = sensor_value_to_double(&p);
          data->humidity    = sensor_value_to_double(&h);
          return 0;
      }
    ''',
    'src/main.c': '''
      #include "bme680.h"
      #include <zephyr/logging/log.h>
      /*
       * Zephyr application entry point.
       * Generated by demol -- ALERT trigger loop.
       */
      
      #include <zephyr/kernel.h>
      LOG_MODULE_REGISTER(app, LOG_LEVEL_INF);
      
      static struct bme680_data bme680_data = {0};
      static int64_t last_trigger_fever_alert_ms = 0;
      static int64_t last_trigger_humid_alert_ms = 0;
      
      void check_alerts(void)
      {
      	int64_t now_ms = k_uptime_get();
      	/* ALERT fever_alert on bme680 -- publish "my_wemos.alerts.fever" */
      	if ((bme680_data.temperature) > 38.5) {
      		if (last_trigger_fever_alert_ms == 0 ||
      		    (now_ms - last_trigger_fever_alert_ms) >= 60000) {
      			last_trigger_fever_alert_ms = now_ms;
      			LOG_INF("ALERT fever_alert: PUBLISH to my_wemos.alerts.fever");
      		}
      	}
      	/* ALERT humid_alert on bme680 -- publish "my_wemos.alerts.humidity" */
      	if ((bme680_data.humidity) > 75.0) {
      		if (last_trigger_humid_alert_ms == 0 ||
      		    (now_ms - last_trigger_humid_alert_ms) >= 30000) {
      			last_trigger_humid_alert_ms = now_ms;
      			LOG_INF("ALERT humid_alert: PUBLISH to my_wemos.alerts.humidity");
      		}
      	}
      }
      
      int main(void)
      {
      	while (1) {
      		check_alerts();
      		k_msleep(1000);
      	}
      	return 0;
      }
    ''',
  })
# ---
# name: test_zephyr_codegen_golden[wemos_button][wemos_button]
  dict({
    'CMakeLists.txt': '''
      cmake_minimum_required(VERSION 3.20.0)
      find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})
      project(wemosd1mini)
      target_sources(app PRIVATE src/main.c)
      target_include_directories(app PRIVATE src/include)
    ''',
    'boards/wemosd1mini.overlay': '''
      /* Generated by demol */
  
    ''',
    'prj.conf': '''
      # Generated by demol
      CONFIG_GPIO=y
      # MQTT client stack (T16 — skeleton only)
      CONFIG_NET_IPV4=y
      CONFIG_NET_TCP=y
      CONFIG_NET_SOCKETS=y
      CONFIG_NET_SOCKETS_OFFLOAD=n
      CONFIG_NET_DHCPV4=y
      CONFIG_MQTT_LIB=y
  
    ''',
    'src/button.c': '''
      /*
       * Zephyr tactile button driver (GPIO input with interrupt).
       * Generated by demol — uses Zephyr's gpio_dt_spec + gpio_add_callback.
       */
      
      #include <zephyr/device.h>
      #include <zephyr/drivers/gpio.h>
      
      #include "button.h"
      
      static const struct gpio_dt_spec button = GPIO_DT_SPEC_GET(DT_INST(0, gpio_keys), gpios);
      static struct gpio_callback button_cb;
      static void (*button_user_cb)(void);
      
      static void button_pressed(const struct device *dev, struct gpio_callback *cb, uint32_t pins)
      {
          ARG_UNUSED(dev);
          ARG_UNUSED(cb);
          ARG_UNUSED(pins);
          if (button_user_cb) {
              button_user_cb();
          }
      }
      
      int button_init(void (*callback)(void))
      {
          int ret;
      
          if (!gpio_is_ready_dt(&button)) {
              return -ENODEV;
          }
      
          button_user_cb = callback;
      
          ret = gpio_pin_configure_dt(&button, GPIO_INPUT);
          if (ret < 0) {
              return ret;
          }
      
          gpio_init_callback(&button_cb, button_pressed, BIT(button.pin));
          ret = gpio_add_callback(button.port, &button_cb);
          if (ret < 0) {
              return ret;
          }
      
          return gpio_pin_interrupt_configure_dt(&button, GPIO_INT_EDGE_TO_ACTIVE);
      }
    ''',
    'src/main.c': '''
      /*
       * Zephyr application entry point.
       * Generated by demol — driver logic is added in a later task.
       */
      
      #include <zephyr/kernel.h>
      #include <zephyr/net/mqtt.h>
      #include <zephyr/net/socket.h>
      
      static struct mqtt_client client;
      
      static void mqtt_init(void)
      {
              /* T16 skeleton: broker.connect, client.init.
               * Full publish loop is implemented in a later task.
               */
      }
      
      int main(void)
      {
              mqtt_init();
              return 0;
      }
  
    ''',
  })
# ---
# name: test_zephyr_codegen_golden[wemos_constraint_bme680][wemos_constraint_bme680]
  dict({
    'CMakeLists.txt': '''
      cmake_minimum_required(VERSION 3.20.0)
      find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})
      project(wemosd1mini)
      target_sources(app PRIVATE src/main.c src/constraint.c)
      target_include_directories(app PRIVATE src/include)
    ''',
    'boards/wemosd1mini.overlay': '''
      /* Generated by demol */
      &i2c0 { bme680@0x76 { status = "okay"; reg = <0x76>; compatible = "bosch,bme680"; }; };
  
    ''',
    'prj.conf': '''
      # Generated by demol
      CONFIG_BME680=y
      # MQTT client stack (T16 — skeleton only)
      CONFIG_NET_IPV4=y
      CONFIG_NET_TCP=y
      CONFIG_NET_SOCKETS=y
      CONFIG_NET_SOCKETS_OFFLOAD=n
      CONFIG_NET_DHCPV4=y
      CONFIG_MQTT_LIB=y
  
    ''',
    'src/bme680.c': '''
      /*
       * Zephyr BME680 driver (env sensor: temperature, pressure, humidity).
       * Generated by demol — uses Zephyr's built-in bosch,bme680 sensor
       * driver via the unified sensor_sample_fetch / sensor_channel_get API.
       */
      
      #include <zephyr/device.h>
      #include <zephyr/drivers/sensor.h>
      #include <zephyr/drivers/sensor/bme680.h>
      
      #include "bme680.h"
      
      static const struct device *bme680_dev = DEVICE_DT_GET(DT_INST(0, bosch_bme680));
      
      int bme680_init(void)
      {
          if (!device_is_ready(bme680_dev)) {
              return -ENODEV;
          }
          return 0;
      }
      
      int bme680_read(struct bme680_data *data)
      {
          struct sensor_value t = {0};
          struct sensor_value p = {0};
          struct sensor_value h = {0};
      
          if (sensor_sample_fetch(bme680_dev) < 0) {
              return -EIO;
          }
      
          sensor_channel_get(bme680_dev, SENSOR_CHAN_AMBIENT_TEMP, &t);
          sensor_channel_get(bme680_dev, SENSOR_CHAN_PRESS, &p);
          sensor_channel_get(bme680_dev, SENSOR_CHAN_HUMIDITY, &h);
      
          data->temperature = sensor_value_to_double(&t);
          data->pressure    = sensor_value_to_double(&p);
          data->humidity    = sensor_value_to_double(&h);
          return 0;
      }
    ''',
    'src/constraint.c': '''
      /*
       * Zephyr CONSTRAINT runtime — implementation.
       * Generated by demol for WemosConstraintBME680.
       *
       * Threading model:
       *   - constraint_mutex guards _devices[] and _device_count.
       *   - register_peripheral() is safe to call from any Zephyr thread.
       *   - The periodic check is dispatched on the system workqueue via
       *     k_work_delayable, with a 10-second default interval.
       *
       * Failure action (per design doc §4.3):
       *   - LOG_WRN with the constraint name and message.
       *   - atomic_inc(&constraint_failures) for downstream ALERT triggers.
       */
      #include <zephyr/kernel.h>
      #include <zephyr/logging/log.h>
      
      #include "constraint.h"
      
      LOG_MODULE_REGISTER(constraint, LOG_LEVEL_WRN);
      
      #define CONSTRAINT_CHECK_INTERVAL_S 10
      
      K_MUTEX_DEFINE(constraint_mutex);
      atomic_t constraint_failures = ATOMIC_INIT(0);
      
      static struct periph_state _devices[DEMOL_MAX_PERIPHERALS];
      static uint8_t _device_count = 0;
      
      static struct k_work_delayable _constraint_work;
      
      /* Predicate for CONSTRAINT power_ok: Total peripheral power exceeds 100 mW budget */
      bool _eval_constraint_power_ok(void)
      {
      	return (((_sum_power_mW()) < (100)));
      }
      
      struct constraint_entry {
      	const char *name;
      	const char *message;
      	bool (*eval)(void);
      };
      
      static const struct constraint_entry _constraints[] = {
      	{ "power_ok", "Total peripheral power exceeds 100 mW budget", _eval_constraint_power_ok },
      };
      #define _CONSTRAINT_COUNT (sizeof(_constraints) / sizeof(_constraints[0]))
      
      /* ---------------------------------------------------------------------- */
      /* Helpers guarded by constraint_mutex                                     */
      /* ---------------------------------------------------------------------- */
      
      static uint8_t _count_kind(uint8_t kind)
      {
      	uint8_t n = 0;
      
      	k_mutex_lock(&constraint_mutex, K_FOREVER);
      	for (uint8_t i = 0; i < _device_count; i++) {
      		if (_devices[i].kind == kind) {
      			n++;
      		}
      	}
      	k_mutex_unlock(&constraint_mutex);
      	return n;
      }
      
      static uint8_t _count_connected(void)
      {
      	uint8_t n = 0;
      
      	k_mutex_lock(&constraint_mutex, K_FOREVER);
      	for (uint8_t i = 0; i < _device_count; i++) {
      		if (_devices[i].connected) {
      			n++;
      		}
      	}
      	k_mutex_unlock(&constraint_mutex);
      	return n;
      }
      
      static int32_t _sum_power_mW(void)
      {
      	int32_t total = 0;
      
      	k_mutex_lock(&constraint_mutex, K_FOREVER);
      	for (uint8_t i = 0; i < _device_count; i++) {
      		if (_devices[i].power_mW >= 0) {
      			total += _devices[i].power_mW;
      		}
      	}
      	k_mutex_unlock(&constraint_mutex);
      	return total;
      }
      
      static int32_t _max_power_mW(void)
      {
      	int32_t peak = 0;
      
      	k_mutex_lock(&constraint_mutex, K_FOREVER);
      	for (uint8_t i = 0; i < _device_count; i++) {
      		if (_devices[i].power_mW > peak) {
      			peak = _devices[i].power_mW;
      		}
      	}
      	k_mutex_unlock(&constraint_mutex);
      	return peak;
      }
      
      void register_peripheral(const char *name, uint8_t kind, int32_t power_mW)
      {
      	k_mutex_lock(&constraint_mutex, K_FOREVER);
      	if (_device_count < DEMOL_MAX_PERIPHERALS) {
      		_devices[_device_count].name = name;
      		_devices[_device_count].kind = kind;
      		_devices[_device_count].power_mW = power_mW;
      		_devices[_device_count].connected = true;
      		_device_count++;
      	}
      	k_mutex_unlock(&constraint_mutex);
      }
      
      static void _constraint_work_handler(struct k_work *work)
      {
      	ARG_UNUSED(work);
      	check_constraints();
      	k_work_schedule(&_constraint_work, K_SECONDS(CONSTRAINT_CHECK_INTERVAL_S));
      }
      
      void constraint_init(void)
      {
      	k_work_schedule(&_constraint_work, K_SECONDS(CONSTRAINT_CHECK_INTERVAL_S));
      }
      
      void check_constraints(void)
      {
      	/* _constraints[] is a const table populated at init time, so we
      	 * don't need to hold constraint_mutex while iterating. Each
      	 * predicate function internally takes the lock when it reads
      	 * _devices[]. */
      	for (size_t i = 0; i < _CONSTRAINT_COUNT; i++) {
      		const struct constraint_entry *c = &_constraints[i];
      
      		if (c->eval()) {
      			continue;
      		}
      		atomic_inc(&constraint_failures);
      		LOG_WRN("[Constraint-Violated] %s: %s",
      			c->name,
      			c->message ? c->message : "expression is false");
      	}
      }
    ''',
    'src/constraint.h': '''
      /*
       * Zephyr CONSTRAINT runtime — public API.
       * Generated by demol for WemosConstraintBME680.
       *
       * Each declared CONSTRAINT becomes a predicate function that the periodic
       * k_work_delayable callback invokes via check_constraints(). The state mutex
       * is exposed so peripheral drivers can register themselves safely from any
       * Zephyr thread context.
       */
      #ifndef DEMOL_CONSTRAINT_H_
      #define DEMOL_CONSTRAINT_H_
      
      #include <zephyr/kernel.h>
      
      #ifdef __cplusplus
      extern "C" {
      #endif
      
      /* Maximum number of peripherals tracked by the constraint runtime. Mirrors
       * the design doc §4.1 value and is shared with constraint.c. */
      #ifndef DEMOL_MAX_PERIPHERALS
      #define DEMOL_MAX_PERIPHERALS 16
      #endif
      
      /* Peripheral kind codes used by the constraint runtime. Values match the
       * built-in function table in docs/constraint-runtime-design.md §4.1. */
      #define DEMOL_KIND_SENSOR     0
      #define DEMOL_KIND_ACTUATOR   1
      #define DEMOL_KIND_PERIPHERAL 2
      
      /* Per-peripheral runtime state. Drivers call register_peripheral() to fill
       * their slot; the constraint predicates then read these fields under
       * constraint_mutex. */
      struct periph_state {
      	const char *name;
      	uint8_t kind;
      	int32_t power_mW;     /* -1 if unknown / not measured */
      	bool connected;
      };
      
      /* Process-wide mutex protecting _devices[]. Drivers acquire it inside
       * register_peripheral() so the table stays consistent under concurrent
       * registration. */
      extern struct k_mutex constraint_mutex;
      
      /* Process-wide counter of constraint failures. Read by check_constraints()
       * on each tick, and exposed for the ALERT subsystem to query. */
      extern atomic_t constraint_failures;
      
      /* Register a peripheral with the constraint runtime. Must be called once
       * per peripheral during its init path. power_mW == -1 means "unknown". */
      void register_peripheral(const char *name, uint8_t kind, int32_t power_mW);
      
      /* Initialise the constraint runtime. Call from main() before k_sleep().
       * Schedules the periodic check work item. */
      void constraint_init(void);
      
      /* Evaluate every declared CONSTRAINT and log/inc on failure. Safe to call
       * from any thread; acquires constraint_mutex briefly per predicate. */
      void check_constraints(void);
      
      /* Predicate for CONSTRAINT power_ok. */
      bool _eval_constraint_power_ok(void);
      
      #ifdef __cplusplus
      }
      #endif
      
      #endif /* DEMOL_CONSTRAINT_H_ */
    ''',
    'src/main.c': '''
      /*
       * Zephyr application entry point.
       * Generated by demol — driver logic is added in a later task.
       */
      
      #include <zephyr/kernel.h>
      #include <zephyr/net/mqtt.h>
      #include <zephyr/net/socket.h>
      
      static struct mqtt_client client;
      
      static void mqtt_init(void)
      {
              /* T16 skeleton: broker.connect, client.init.
               * Full publish loop is implemented in a later task.
               */
      }
      
      int main(void)
      {
              mqtt_init();
              return 0;
      }
  
    ''',
  })
# ---
# name: test_zephyr_codegen_golden[wemos_mqtt_bme680][wemos_mqtt_bme680]
  dict({
    'CMakeLists.txt': '''
      cmake_minimum_required(VERSION 3.20.0)
      find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})
      project(wemosd1r32)
      target_sources(app PRIVATE src/main.c)
      target_include_directories(app PRIVATE src/include)
    ''',
    'boards/wemosd1r32.overlay': '''
      /* Generated by demol */
      &i2c0 { bme680@0x76 { status = "okay"; reg = <0x76>; compatible = "bosch,bme680"; }; };
  
    ''',
    'prj.conf': '''
      # Generated by demol
      CONFIG_BME680=y
      # MQTT client stack (T16 — skeleton only)
      CONFIG_NET_IPV4=y
      CONFIG_NET_TCP=y
      CONFIG_NET_SOCKETS=y
      CONFIG_NET_SOCKETS_OFFLOAD=n
      CONFIG_NET_DHCPV4=y
      CONFIG_MQTT_LIB=y
  
    ''',
    'src/bme680.c': '''
      /*
       * Zephyr BME680 driver (env sensor: temperature, pressure, humidity).
       * Generated by demol — uses Zephyr's built-in bosch,bme680 sensor
       * driver via the unified sensor_sample_fetch / sensor_channel_get API.
       */
      
      #include <zephyr/device.h>
      #include <zephyr/drivers/sensor.h>
      #include <zephyr/drivers/sensor/bme680.h>
      
      #include "bme680.h"
      
      static const struct device *bme680_dev = DEVICE_DT_GET(DT_INST(0, bosch_bme680));
      
      int bme680_init(void)
      {
          if (!device_is_ready(bme680_dev)) {
              return -ENODEV;
          }
          return 0;
      }
      
      int bme680_read(struct bme680_data *data)
      {
          struct sensor_value t = {0};
          struct sensor_value p = {0};
          struct sensor_value h = {0};
      
          if (sensor_sample_fetch(bme680_dev) < 0) {
              return -EIO;
          }
      
          sensor_channel_get(bme680_dev, SENSOR_CHAN_AMBIENT_TEMP, &t);
          sensor_channel_get(bme680_dev, SENSOR_CHAN_PRESS, &p);
          sensor_channel_get(bme680_dev, SENSOR_CHAN_HUMIDITY, &h);
      
          data->temperature = sensor_value_to_double(&t);
          data->pressure    = sensor_value_to_double(&p);
          data->humidity    = sensor_value_to_double(&h);
          return 0;
      }
    ''',
    'src/main.c': '''
      /*
       * Zephyr application entry point.
       * Generated by demol -- SAMPLING loop.
       */
      
      #include <zephyr/kernel.h>
      
      int main(void)
      {
      	while (1) {
      		k_msleep(100);
      		bme680_read();
      	}
      	return 0;
      }
    ''',
  })
# ---
# name: test_zephyr_codegen_golden[wemos_sampling_bme680][wemos_sampling_bme680]
  dict({
    'CMakeLists.txt': '''
      cmake_minimum_required(VERSION 3.20.0)
      find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})
      project(wemosd1r32)
      target_sources(app PRIVATE src/main.c)
      target_include_directories(app PRIVATE src/include)
    ''',
    'boards/wemosd1r32.overlay': '''
      /* Generated by demol */
      &i2c0 { bme680@0x76 { status = "okay"; reg = <0x76>; compatible = "bosch,bme680"; }; };
  
    ''',
    'prj.conf': '''
      # Generated by demol
      CONFIG_BME680=y
      # MQTT client stack (T16 — skeleton only)
      CONFIG_NET_IPV4=y
      CONFIG_NET_TCP=y
      CONFIG_NET_SOCKETS=y
      CONFIG_NET_SOCKETS_OFFLOAD=n
      CONFIG_NET_DHCPV4=y
      CONFIG_MQTT_LIB=y
  
    ''',
    'src/bme680.c': '''
      /*
       * Zephyr BME680 driver (env sensor: temperature, pressure, humidity).
       * Generated by demol — uses Zephyr's built-in bosch,bme680 sensor
       * driver via the unified sensor_sample_fetch / sensor_channel_get API.
       */
      
      #include <zephyr/device.h>
      #include <zephyr/drivers/sensor.h>
      #include <zephyr/drivers/sensor/bme680.h>
      
      #include "bme680.h"
      
      static const struct device *bme680_dev = DEVICE_DT_GET(DT_INST(0, bosch_bme680));
      
      int bme680_init(void)
      {
          if (!device_is_ready(bme680_dev)) {
              return -ENODEV;
          }
          return 0;
      }
      
      int bme680_read(struct bme680_data *data)
      {
          struct sensor_value t = {0};
          struct sensor_value p = {0};
          struct sensor_value h = {0};
      
          if (sensor_sample_fetch(bme680_dev) < 0) {
              return -EIO;
          }
      
          sensor_channel_get(bme680_dev, SENSOR_CHAN_AMBIENT_TEMP, &t);
          sensor_channel_get(bme680_dev, SENSOR_CHAN_PRESS, &p);
          sensor_channel_get(bme680_dev, SENSOR_CHAN_HUMIDITY, &h);
      
          data->temperature = sensor_value_to_double(&t);
          data->pressure    = sensor_value_to_double(&p);
          data->humidity    = sensor_value_to_double(&h);
          return 0;
      }
    ''',
    'src/main.c': '''
      /*
       * Zephyr application entry point.
       * Generated by demol -- SAMPLING loop.
       */
      
      #include <zephyr/kernel.h>
      
      int main(void)
      {
      	while (1) {
      		k_msleep(100);
      		bme680_read();
      	}
      	return 0;
      }
    ''',
  })
# ---
# name: test_zephyr_codegen_golden[wemos_srf05][wemos_srf05]
  dict({
    'CMakeLists.txt': '''
      cmake_minimum_required(VERSION 3.20.0)
      find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})
      project(wemosd1mini)
      target_sources(app PRIVATE src/main.c)
      target_include_directories(app PRIVATE src/include)
    ''',
    'boards/wemosd1mini.overlay': '''
      /* Generated by demol */
  
    ''',
    'prj.conf': '''
      # Generated by demol
      CONFIG_GPIO=y
      # MQTT client stack (T16 — skeleton only)
      CONFIG_NET_IPV4=y
      CONFIG_NET_TCP=y
      CONFIG_NET_SOCKETS=y
      CONFIG_NET_SOCKETS_OFFLOAD=n
      CONFIG_NET_DHCPV4=y
      CONFIG_MQTT_LIB=y
  
    ''',
    'src/main.c': '''
      /*
       * Zephyr application entry point.
       * Generated by demol — driver logic is added in a later task.
       */
      
      #include <zephyr/kernel.h>
      #include <zephyr/net/mqtt.h>
      #include <zephyr/net/socket.h>
      
      static struct mqtt_client client;
      
      static void mqtt_init(void)
      {
              /* T16 skeleton: broker.connect, client.init.
               * Full publish loop is implemented in a later task.
               */
      }
      
      int main(void)
      {
              mqtt_init();
              return 0;
      }
  
    ''',
    'src/srf05.c': '''
      /*
       * Zephyr SRF05 driver (trigger-echo ultrasonic distance sensor).
       * Generated by demol — uses the shared trigger_echo_init /
       * trigger_echo_read macros from _macros.j2.
       *
       * Note: SRF05 is timing-compatible with SRF04; the same trigger-then-
       * measure-echo protocol applies.
       */
      
      #include <zephyr/device.h>
      #include <zephyr/drivers/gpio.h>
      
      #include "srf05.h"
      
      static int trigger_echo_init_d3_d4(const struct device *dev)
      {
          ARG_UNUSED(dev);
          if (!device_is_ready(dev)) {
              return -ENODEV;
          }
          return 0;
      }
      static int32_t trigger_echo_read_d3_d4(const struct device *dev, uint32_t timeout_us)
      {
          ARG_UNUSED(dev);
          ARG_UNUSED(timeout_us);
          /* Set trigger high for 10us, measure echo pulse width.
           *
           * The full GPIO + cycle-counter shim is filled in by the user
           * when porting to a specific board. The skeleton is intentionally
           * left as a documented stub so the template renders for every
           * trigger-echo device without compiling device-specific includes.
           */
          return 0;
      }
      
      static const struct gpio_dt_spec srf05_trigger = GPIO_DT_SPEC_GET(DT_INST(0, gpio_trigger), gpios);
      static const struct gpio_dt_spec srf05_echo    = GPIO_DT_SPEC_GET(DT_INST(0, gpio_echo),    gpios);
      static const struct device *srf05_dev          = DEVICE_DT_GET(DT_INST(0, gpio_trigger));
      
      int srf05_init(void)
      {
          return trigger_echo_init_d3_d4(srf05_dev);
      }
      
      int srf05_read_cm(uint32_t timeout_us)
      {
          ARG_UNUSED(srf05_trigger);
          ARG_UNUSED(srf05_echo);
          return trigger_echo_read_d3_d4(srf05_dev, timeout_us);
      }
    ''',
  })
# ---
